# YumeEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  rungcc.sh
CMake/: CMakeBuildSettings.cmake  CMakeLists.txt  Common.cmake  FindD3D.cmake  FindDXUT.cmake  FindLibraries.cmake  Macros.cmake  Paths.cmake
CMake/Templates/: CMakeBuildSettings.h.in  VisualStudioUserFile.vcproj.user.in  VisualStudioUserFile.vcxproj.user.in
CMake/Utils/: FindPkgMacros.cmake  PrecompiledHeader.cmake
Engine/: CMakeLists.txt
Engine/Renderers/Direct3D11/: CMakeLists.txt  YumeD3D11ConstantBuffer.cc  YumeD3D11ConstantBuffer.h  YumeD3D11GpuResource.cc  YumeD3D11GpuResource.h  YumeD3D11IndexBuffer.cc  YumeD3D11IndexBuffer.h  YumeD3D11InputLayout.cc  YumeD3D11InputLayout.h  YumeD3D11Renderable.cc  YumeD3D11Renderable.h  YumeD3D11Renderer.cc  YumeD3D11Renderer.h  YumeD3D11RendererImpl.cc  YumeD3D11RendererImpl.h  YumeD3D11Required.h  YumeD3D11Shader.cc  YumeD3D11Shader.h  YumeD3D11ShaderProgram.h  YumeD3D11ShaderVariation.cc  YumeD3D11ShaderVariation.h  YumeD3D11Texture.cc  YumeD3D11Texture.h  YumeD3D11Texture2D.cc  YumeD3D11Texture2D.h  YumeD3D11Texture3D.cc  YumeD3D11Texture3D.h  YumeD3D11TextureCube.cc  YumeD3D11TextureCube.h  YumeD3D11VertexBuffer.cc  YumeD3D11VertexBuffer.h
Engine/Renderers/Null/: CMakeLists.txt  YumeNullRenderer.cc  YumeNullRenderer.h
Engine/Renderers/OpenGL/: CMakeLists.txt  YumeGLConstantBuffer.cc  YumeGLConstantBuffer.h  YumeGLGpuResource.cc  YumeGLGpuResource.h  YumeGLIndexBuffer.cc  YumeGLIndexBuffer.h  YumeGLRenderable.cc  YumeGLRenderable.h  YumeGLRenderer.cc  YumeGLRenderer.h  YumeGLRendererImpl.cc  YumeGLRendererImpl.h  YumeGLRequired.h  YumeGLShader.cc  YumeGLShader.h  YumeGLShaderProgram.cc  YumeGLShaderProgram.h  YumeGLShaderVariation.cc  YumeGLShaderVariation.h  YumeGLTexture2D.cc  YumeGLTexture2D.h  YumeGLTexture3D.cc  YumeGLTexture3D.h  YumeGLTextureCube.cc  YumeGLTextureCube.h  YumeGLVertexBuffer.cc  YumeGLVertexBuffer.h
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.cpp  VectorBase.h
Engine/Source/Runtime/Core/: Pch.cc  PlatformImpl.h  PlatformImpl_Win32.cc  RefCounter.cc  RefCounter.h  SharedPtr.h  Yume.h  YumeAlignedAllocator.cc  YumeAlignedAllocator.h  YumeAlloc.cc  YumeAlloc.h  YumeBase.cc  YumeBase.h  YumeBitPattern.h  YumeBuildSettings.h  YumeCentrum.cc  YumeCentrum.h  YumeCommon.cc  YumeCommon.h  YumeComponentAnimInfo.cc  YumeComponentAnimInfo.h  YumeComponentAnimation.cc  YumeComponentAnimation.h  YumeConfig.h  YumeConfigOption.h  YumeDecompresser.cc  YumeDecompresser.h  YumeDefaults.cc  YumeDefaults.h  YumeDynamicLibrary.cc  YumeDynamicLibrary.h  YumeEnvironment.cc  YumeEnvironment.h  YumeEventHub.h  YumeFile.cc  YumeFile.h  YumeHeaderPrefix.h  YumeHeaderSuffix.h  YumeHeaders.h  YumeIO.cc  (+45 more)
Engine/Source/Runtime/Engine/: YumeApplication.cc  YumeApplication.h  YumeEngine.cc  YumeEngine.h
Engine/Source/Runtime/Graphics/: YumeGraphics.cc  YumeGraphics.h  YumeRenderTarget.cc  YumeRenderTarget.h  YumeRenderWindow.cc  YumeRenderWindow.h  YumeRenderer.cc  YumeRenderer.h  YumeRendererCapabilities.cc  YumeRendererCapabilities.h  YumeViewport.cc  YumeViewport.h
Engine/Source/Runtime/Input/: YumeInput.cc  YumeInput.h
Engine/Source/Runtime/Logging/: log4cplus.cc  logging.h
Renderers/Direct3D11/: CMakeLists.txt
Renderers/Direct3D11/Include/: YumeD3D11Adapter.h  YumeD3D11AdapterInfo.h  YumeD3D11AdapterInfoList.h  YumeD3D11AdapterList.h  YumeD3D11Common.h  YumeD3D11Device.h  YumeD3D11RenderWindow.h  YumeD3D11Renderer.h  YumeD3D11Required.h
Renderers/Direct3D11/Src/: YumeD3D11Adapter.cpp  YumeD3D11AdapterInfo.cpp  YumeD3D11AdapterInfoList.cpp  YumeD3D11AdapterList.cpp  YumeD3D11Device.cpp  YumeD3D11RenderWindow.cpp  YumeD3D11Renderer.cpp
Renderers/Direct3D12/: CMakeLists.txt
Renderers/Direct3D12/Include/: YumeD3D12Common.h  YumeD3D12Device.h
Renderers/Direct3D12/Src/: YumeD3D12Device.cpp
Renderers/OpenGL/: CMakeLists.txt
Renderers/OpenGL/src/: glew.cpp
Samples/: CMakeLists.txt
Samples/AmbientOcclusion1/: AO.cc  AO.h  CMakeLists.txt
Samples/CefTest/: CMakeLists.txt  CefTest.cpp  CefTest.h
Samples/Common/: Common.cc  Common.h
Samples/EmptyProject/: CMakeLists.txt  Main.cc  MainDll.cc  MainDll.h
Samples/FrustumCulling/: CMakeLists.txt  FrustumCulling.cc  FrustumCulling.h
Samples/GodRays/: CMakeLists.txt  GodRays.cc  GodRays.h
Samples/HelloWorld/: BasicRenderWindow.cpp  BasicRenderWindow.h  CMakeLists.txt  Cube.cc  Cube.h  HelloWorld.cpp  HelloWorld.h
Samples/Include/: BasicRenderWindow.h
Samples/LightPropogateVolume/: CMakeLists.txt  common_dxut.cpp  common_dxut.h  common_gui.cpp  common_gui.h  common_renderer.cpp  common_renderer.h  main_gi.cpp  pppipe.cpp  pppipe.h  skydome.h
Samples/Lighting/: CMakeLists.txt  Lighting.cc  Lighting.h
Samples/ModelViewer/: CMakeLists.txt  ModelViewer.cc
Samples/Playground/: CMakeLists.txt  Playground.cc  Playground.h
Samples/PostProcessing/: CMakeLists.txt  PostProcessing.cc
Samples/RotatingCube/: CMakeLists.txt  RotatingCube.cc  RotatingCube.h
Samples/Shadows/: CMakeLists.txt  Shadows.cc  Shadows.h
Samples/SponzaNormal/: CMakeLists.txt  SponzaNormal.cc  SponzaNormal.h
Samples/Src/: BasicRenderWindow.cpp
Samples/TestSuite/: CMakeLists.txt  TestSuite.cpp  TestSuite.h
Yume/: CMakeLists.txt
Yume/Include/: Yume.h  YumeCentrum.h  YumeCommon.h  YumeConfig.h  YumeHeaders.h  YumeLogManager.h  YumeMallocObject.h  YumeMemoryAllocatorConfig.h  YumeMemoryAllocatorNedPooling.h  YumePlatform.h  YumeRenderTarget.h  YumeRenderWindow.h  YumeRenderer.h  YumeRendererCapabilities.h  YumeRequired.h  YumeStdHeaders.h  YumeStringConverter.h  YumeStringVector.h
Yume/Src/: YumeCentrum.cpp  YumeCommon.cpp  YumeLog.cpp  YumeLogManager.cpp  YumeRenderTarget.cpp  YumeRenderWindow.cpp  YumeRenderer.cpp  YumeRendererCapabilities.cpp
(+511 files in other folders)
